--- a/index.html
+++ b/index.html
@@ -2,23 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Trang web giới thiệu về bản thân</title>
+    <title>Index Chapter 6, Chapter 7</title>
 </head>
 <body>
-    <h1>Trang web giới thiệu về bản thân</h1>
-    <li>Tên: Nguyễn Trọng Cường</li>
-    <li>Email: troncuong@live.com</li>
-    <li>Điện thoại: 0913002503</li>
-    <li>Facebook: TrongCuong Nguyen</li>
-    <img src="https://tpc.googlesyndication.com/simgad/15357710676742382118" alt="">
-    <li>Mong muốn khi học lập trình để có thể chỉnh sửa được code hóa đơn điện tử</li>
-    <li>Hiểu biết được câu lệnh từng môn học áp dụng vào công việc</li>
-    <h2>Giới thiệu về các thành viên trong nhóm 4</h2>
-    <li>1. Nguyễn Minh Tuấn - Thành viên</li>
-    <li>2. Nguyễn Ngọc Thùy - Thành viên</li>
-    <li>3. Đậu Minh Tâm - Nhóm trưởng</li>
-    <li>4. Phí Hùng Mạnh - Thành viên</li>
-    <li>5. Nguyễn Trọng Cường - Thành viên</li>
-    <li>6. Nguyễn Bá Anh - Thành viên</li>
-   </body>
+<ol>
+    <h1>Chapter 6: Tables</h1>
+    <li>Basic Table Structure</li>
+    <Li>Border and Background</Li>
+    <li>Exam Display Table</li>
+    <li>Long Table</li>
+    <li>Spanning Rows</li>
+    <li>Spanning Columns</li>
+    <li>Table Headings</li>
+    <li>Width and Spacing</li>
+    <a href="./Chapter-06"></a>
+</ol>
+<ol>
+    <h1>Chapter 7: Forms</h1>
+    <li>Button and Hidden Controls</li>
+    <li>Check Box</li>
+    <li>Drop Down list</li>
+    <li>File Input Box</li>
+    <li>Grouping Form Clements</li>
+    <li>HTML5 Date Input</li>
+    <li>HTML5 Email Input</li>
+    <li>HTML5 Form Validation</li>
+    <li>HTML5 Placeholder</li>
+    <li>HTML5 Search Input</li>
+    <li>HTML5 URL Input</li>
+    <li>Image Button</li>
+    <li>Labelling Form Controls</li>
+    <li>Password Input</li>
+    <li>Preview Exam</li>
+    <li>Radio Button</li>
+    <li>Submit Button</li>
+    <li>Text Input</li>
+    <li>Textarea</li>
+    <a href="Chapter-07"></a>
+</ol>
+</body>
 </html>
