--- a/Form.html
+++ b/Form.html
@@ -19,11 +19,11 @@
     </div>
     <div class="col-md-5">
         <label for="inputEmail4" class="form-label">Business email</label>
-        <input type="email" class="form-control" id="inputEmail4" style="border-color: red">
+        <input type="email" class="form-control" id="inputEmail4" style="border-color: green">
     </div>
     <div class="col-md-5">
         <label for="inputPassword4" class="form-label">Phone Number</label>
-        <input type="password" class="form-control" id="inputPassword4" style="border-color: red">
+        <input type="password" class="form-control" id="inputPassword4" style="border-color: green">
     </div>
     <div class="col-10">
         <label for="inputAddress" class="form-label">Job Title</label>
